fixed some layout bugs

--- a/css/justified-nav.css
+++ b/css/justified-nav.css
@@ -24,7 +24,7 @@ body {
 .nav-justified {
   background-color: #eee;
   border-radius: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid #000;
 }
 .nav-justified > li > a {
   margin-bottom: 0;
@@ -33,7 +33,7 @@ body {
   color: #777;
   font-weight: bold;
   text-align: center;
-  border-bottom: 1px solid #d5d5d5;
+  border-bottom: 1px solid #000;
   background-color: #e5e5e5; /* Old browsers */
   background-repeat: repeat-x; /* Repeat the gradient */
   background-image: -moz-linear-gradient(top, #f5f5f5 0%, #e5e5e5 100%); /* FF3.6+ */
@@ -42,7 +42,6 @@ body {
   background-image: -o-linear-gradient(top, #f5f5f5 0%,#e5e5e5 100%); /* Opera 11.10+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
   background-image: linear-gradient(top, #f5f5f5 0%,#e5e5e5 100%); /* W3C */
-  
 }
 .nav-justified > .active > a,
 .nav-justified > .active > a:hover,
@@ -64,16 +63,16 @@ body {
     max-height: 52px;
   }
   .nav-justified > li > a {
-    border-left: 1px solid #fff;
-    border-right: 1px solid #d5d5d5;
+    border-left: 1px solid #000;
+    border-right: 1px solid #000;
   }
   .nav-justified > li:first-child > a {
-    border-left: 0;
+    border-left: 1px solid #000;
     border-radius: 5px 0 0 5px;
   }
   .nav-justified > li:last-child > a {
     border-radius: 0 5px 5px 0;
-    border-right: 0;
+    border-right: 1px solid #000;
   }
 }
 
